// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AdditionalResources Basic 1`] = `
<div
  className="additional-resources__container mt-4 mb-0"
>
  <h1
    className="additional-resources__title text-muted"
  >
    ADDITIONAL RESOURCES
  </h1>
  <hr
    className="my-2"
  />
  <a
    className="mx-3"
    href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4"
    rel="noopener noreferrer"
    target="_blank"
  >
    Setup Instructions
  </a>
  <hr
    className="my-2"
  />
  <a
    className="mx-3"
    href="#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Github Basics
  </a>
  <hr
    className="my-2"
  />
  <a
    className="mx-3"
    href="https://stackoverflow.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Stack Overflow
  </a>
  <hr
    className="my-2"
  />
  <a
    className="mx-3"
    href="https://chat.c0d3.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Help & Support
  </a>
  <hr
    className="my-2"
  />
</div>
`;

exports[`Storyshots Components/Alert Basic 1`] = `
<div
  className="alert col-12 mt-4 bg-primary text-white"
  role="alert"
>
  Set up your computer to submit challenges. 
</div>
`;

exports[`Storyshots Components/Alert With Classes 1`] = `
<div
  className="alert col-12 mt-4 alert-danger"
  role="alert"
>
  Set up your computer to submit challenges. 
</div>
`;

exports[`Storyshots Components/Alert With Icon 1`] = `
<div
  className="alert col-12 mt-4 bg-primary text-white"
  role="alert"
>
  <img
    className="mr-3"
    src="/curriculumAssets/icons/icon-tip.svg"
  />
  Set up your computer to submit challenges. 
</div>
`;

exports[`Storyshots Components/Alert With Instructions 1`] = `
<div
  className="alert col-12 mt-4 bg-primary text-white"
  role="alert"
>
  Set up your computer to submit challenges. 
  <a
    className="text-white"
    href="https://www.notion.so/JS-0-Foundations-a43ca620e54945b2b620bcda5f3cf672#b45ed85a95e24c9d9fb784afb7a46bcc"
    rel="noopener noreferrer"
    target="_blank"
  >
    View Instructions
  </a>
</div>
`;

exports[`Storyshots Components/AnnouncementCard Basic 1`] = `
<div
  className="announcement-card__container card shadow-sm mt-3 p-2 d-flex border-0"
>
  <div
    className="card-body"
  >
    <h1
      className="announcement-card__title"
    >
      General Announcements
    </h1>
    <div
      className="mt-3"
    >
      <p
        className="font-weight-bold"
      >
        Updates and Guidelines
      </p>
      <p
        className="mt-4"
      >
        To make space for other students on our servers, your account will be deleted after 30 days of inactivity.
      </p>
      <p
        className="mt-4"
      >
        Take each lesson challenge seriously and do them over and over again until you can solve them. With the exception End to End, all challenges are questions and exercises taken from real interviews.
      </p>
      <p
        className="mt-4"
      >
        This lesson will not only prepare you for interviews, but it will also help teach you the skills that you need to become an effective engineer.
      </p>
      <p
        className="mt-4"
      >
        After completing Foundations of JavaScript, Variables & Functions, Array, Objects, End to End, HTML/CSS/JavaScript, React/GraphQL/SocketIO, you will be technically ready to contribute to our codebase.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AppNavBar Logged In 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand text-primary font-weight-bold"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      C0D3
    </a>
    <div
      id="navbarNav"
    >
      <div
        className="navbar-nav collapse navbar-collapse"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <a
            className="nav-item nav-link active"
            href="/curriculum"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className="sr-only"
            >
              (current)
            </span>
            Curriculum
          </a>
          <a
            className="nav-item nav-link"
            href="#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Repo
          </a>
          <a
            className="nav-item nav-link"
            href="#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Journey
          </a>
          <a
            className="nav-item nav-link"
            href="https://chat.c0d3.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Help
          </a>
        </div>
      </div>
    </div>
    <div>
      <button
        className="btn border btn-secondary overflow-hidden p-2 text-truncate"
        style={
          Object {
            "fontSize": "13px",
            "maxWidth": "125px",
          }
        }
      >
        <small
          className="text-uppercase bg-primary rounded-circle mr-2 text-light p-1"
        >
          HW
        </small>
        hwong0305
      </button>
      <button
        className="btn border btn-secondary ml-2"
      >
        Logout
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Components/AppNavBar Logged Out 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand text-primary font-weight-bold"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      C0D3
    </a>
    <div
      id="navbarNav"
    >
      <div
        className="navbar-nav collapse navbar-collapse"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <a
            className="nav-item nav-link active"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className="sr-only"
            >
              (current)
            </span>
            Home
          </a>
          <a
            className="nav-item nav-link"
            href="/#learning"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Learning Process
          </a>
          <a
            className="nav-item nav-link"
            href="https://c0d3.com/book"
            rel="noopener noreferrer"
            target="_blank"
          >
            Resources
          </a>
          <a
            className="nav-item nav-link"
            href="https://chat.c0d3.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Help
          </a>
        </div>
      </div>
    </div>
    <div>
      <a
        className="btn btn-secondary border mr-3"
        href="/login"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Login
      </a>
      <a
        className="btn btn-secondary border mr-3"
        href="/signup"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Signup
      </a>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Components/Button Border With Text 1`] = `
<button
  className="btn border btn-secondary overflow-hidden text-truncate"
>
  Click Me
</button>
`;

exports[`Storyshots Components/Button Color Badge Button 1`] = `
<button
  className="btn border btn-secondary overflow-hidden text-truncate"
  style={
    Object {
      "fontSize": "13px",
      "maxWidth": "125px",
    }
  }
>
  <small
    className="text-uppercase bg-primary rounded-circle mr-2 text-light p-1"
  >
    SZ
  </small>
  Song
</button>
`;

exports[`Storyshots Components/Button Color With Text 1`] = `
<button
  className="btn btn-primary"
>
  Click Me
</button>
`;

exports[`Storyshots Components/Card Basic 1`] = `
<div
  className="row mt-5"
>
  <div
    className="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
  >
    <div
      className="card-body text-center pt-5 pb-5"
    >
      <h1
        className="card-title h2 font-weight-bold mb-5"
      >
        Title of the card
      </h1>
      <p
        className="card-text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Children 1`] = `
<div
  className="row mt-5"
>
  <div
    className="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
  >
    <div
      className="card-body text-center pt-5 pb-5"
    >
      <h1
        className="card-title h2 font-weight-bold mb-5"
      >
        Title of the card
      </h1>
      <p
        className="card-text"
      >
        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
      </p>
      <div
        className="input-group mb-3"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
            id="inputGroup-sizing-default"
          >
            Default
          </span>
        </div>
        <input
          aria-describedby="inputGroup-sizing-default"
          aria-label="Sizing example input"
          className="form-control"
          type="text"
        />
        <div
          className="col-5"
        >
          <button
            className="btn btn-dark"
            type="button"
          >
            Dark
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Classes 1`] = `
<div
  className="row mt-5"
>
  <div
    className="card shadow-sm col-3 offset-8 bg-dark text-white-50 "
  >
    <div
      className="card-body text-center pt-5 pb-5"
    >
      <h1
        className="card-title h2 font-weight-bold mb-5"
      >
        Title of the card
      </h1>
      <p
        className="card-text"
      >
        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Success 1`] = `
<div
  className="row mt-5"
>
  <div
    className="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
  >
    <div
      className="card-body text-center pt-5 pb-5"
    >
      <svg
        className="mb-4"
        height="100px"
        viewBox="0 0 426.667 426.667"
        width="100px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="active-path"
          d="M293.333 135.04L190.08 240.213l-52.907-53.12-28.373 28.374 83.413 83.2 133.974-129.92z"
          fill="#00CF92"
        />
        <path
          className="active-path"
          d="M213.333 0C95.513 0 0 95.513 0 213.333s95.513 213.333 213.333 213.333 213.333-95.513 213.333-213.333S331.154 0 213.333 0zm0 388.053c-96.495 0-174.72-78.225-174.72-174.72s78.225-174.72 174.72-174.72c96.446.117 174.602 78.273 174.72 174.72 0 96.496-78.224 174.72-174.72 174.72z"
          fill="#00CF92"
        />
      </svg>
      <h1
        className="card-title h2 font-weight-bold mb-5"
      >
        Title of the card
      </h1>
      <p
        className="card-text"
      >
        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Text 1`] = `
<div
  className="row mt-5"
>
  <div
    className="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
  >
    <div
      className="card-body text-center pt-5 pb-5"
    >
      <h1
        className="card-title h2 font-weight-bold mb-5"
      >
        Title of the card
      </h1>
      <p
        className="card-text"
      >
        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeMaterial Basic 1`] = `
<div
  className="row challenge-display"
>
  <div
    className="col-4"
  >
    <div
      className="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
      data-testid="challenge-title"
      onClick={[Function]}
    >
      <div
        className="card-body d-flex justify-content-between"
      >
        <div>
          0. Greater than 5
        </div>
      </div>
    </div>
    <div
      className="card mb-2 challenge-title-card shadow-sm border-0"
      data-testid="challenge-title"
      onClick={[Function]}
    >
      <div
        className="card-body d-flex justify-content-between"
      >
        <div>
          1. Sum of 2 Numbers
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-8"
  >
    <div
      className="card shadow-sm border-0"
    >
      <div
        className="card-body challenge-question"
      >
        <h1
          className="card-title"
          data-testid="challenge-question-title"
        >
          Greater than 5
        </h1>
        <div
          className="bg-light p-3 mt-3"
          data-testid="challenge-question-description"
        >
          <span>
            Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeMaterial No Challenges 1`] = `
<h1>
  No Challenges for this lesson
</h1>
`;

exports[`Storyshots Components/ChallengeMaterial With Diff 1`] = `
<div
  className="row challenge-display"
>
  <div
    className="col-4"
  >
    <div
      className="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
      data-testid="challenge-title"
      onClick={[Function]}
    >
      <div
        className="card-body d-flex justify-content-between"
      >
        <div>
          0. Greater than 5
        </div>
      </div>
    </div>
    <div
      className="card mb-2 challenge-title-card shadow-sm border-0"
      data-testid="challenge-title"
      onClick={[Function]}
    >
      <div
        className="card-body d-flex justify-content-between"
      >
        <div>
          1. Sum of 2 Numbers
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-8"
  >
    <div
      className="card shadow-sm border-0"
    >
      <div
        className="card-body challenge-question"
      >
        <h1
          className="card-title"
          data-testid="challenge-question-title"
        >
          Greater than 5
        </h1>
        <div
          className="bg-light p-3 mt-3"
          data-testid="challenge-question-description"
        >
          <span>
            Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.
          </span>
        </div>
      </div>
    </div>
    <div
      className="card shadow-sm border-0 mt-3"
    >
      <div
        className="card-header bg-white"
      >
        
      </div>
      <div
        className="card-body"
      >
        <div
          className="rounded-lg overflow-hidden"
        >
          <table
            className="css-1n5o7vh-diff-container"
          >
            <tbody>
              <tr
                className="css-1n7ec1i-line"
              >
                <td
                  className="css-1ks9aww-gutter css-1klnsbn-empty-gutter css-cnnxkz-diff-added"
                  onClick={null}
                >
                  <pre
                    className="css-h84nzi-line-number"
                  />
                </td>
                <td
                  className="css-1ks9aww-gutter css-cnnxkz-diff-added"
                  onClick={[Function]}
                >
                  <pre
                    className="css-h84nzi-line-number"
                  >
                    1
                  </pre>
                </td>
                <td
                  className="css-17vezug-marker css-cnnxkz-diff-added"
                >
                  <pre>
                    +
                  </pre>
                </td>
                <td
                  className="css-vl0irh-content css-cnnxkz-diff-added"
                >
                  <pre
                    className="css-o1u8iu-content-text"
                  >
                    const solution = (num) =&gt; {
                  </pre>
                </td>
              </tr>
              <tr
                className="css-1n7ec1i-line"
              >
                <td
                  className="css-1ks9aww-gutter css-1klnsbn-empty-gutter css-cnnxkz-diff-added"
                  onClick={null}
                >
                  <pre
                    className="css-h84nzi-line-number"
                  />
                </td>
                <td
                  className="css-1ks9aww-gutter css-cnnxkz-diff-added"
                  onClick={[Function]}
                >
                  <pre
                    className="css-h84nzi-line-number"
                  >
                    2
                  </pre>
                </td>
                <td
                  className="css-17vezug-marker css-cnnxkz-diff-added"
                >
                  <pre>
                    +
                  </pre>
                </td>
                <td
                  className="css-vl0irh-content css-cnnxkz-diff-added"
                >
                  <pre
                    className="css-o1u8iu-content-text"
                  >
                      return (num &gt; 5)
                  </pre>
                </td>
              </tr>
              <tr
                className="css-1n7ec1i-line"
              >
                <td
                  className="css-1ks9aww-gutter css-1klnsbn-empty-gutter css-cnnxkz-diff-added"
                  onClick={null}
                >
                  <pre
                    className="css-h84nzi-line-number"
                  />
                </td>
                <td
                  className="css-1ks9aww-gutter css-cnnxkz-diff-added"
                  onClick={[Function]}
                >
                  <pre
                    className="css-h84nzi-line-number"
                  >
                    3
                  </pre>
                </td>
                <td
                  className="css-17vezug-marker css-cnnxkz-diff-added"
                >
                  <pre>
                    +
                  </pre>
                </td>
                <td
                  className="css-vl0irh-content css-cnnxkz-diff-added"
                >
                  <pre
                    className="css-o1u8iu-content-text"
                  >
                    }
                  </pre>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeQuestionCard Basic 1`] = `
<div
  className="card shadow-sm border-0"
>
  <div
    className="card-body challenge-question"
  >
    <h1
      className="card-title"
      data-testid="challenge-question-title"
    >
      Greater than 5
    </h1>
    <div
      className="bg-light p-3 mt-3"
      data-testid="challenge-question-description"
    >
      <span>
        Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Active 1`] = `
<div
  className="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Active Complete 1`] = `
<div
  className="card mb-2 challenge-title-card challenge-title-card--active challenge-title-card--done"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
    <img
      height="25px"
      src="/curriculumAssets/icons/checkmark.svg"
      width="25px"
    />
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Active Pending 1`] = `
<div
  className="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
    <img
      height="25px"
      src="/curriculumAssets/icons/rejected.svg"
      width="25px"
    />
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Active Rejected 1`] = `
<div
  className="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
    <img
      height="25px"
      src="/curriculumAssets/icons/rejected.svg"
      width="25px"
    />
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Basic 1`] = `
<div
  className="card mb-2 challenge-title-card shadow-sm border-0"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Complete 1`] = `
<div
  className="card mb-2 challenge-title-card challenge-title-card--done"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
    <img
      height="25px"
      src="/curriculumAssets/icons/checkmark.svg"
      width="25px"
    />
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Pending 1`] = `
<div
  className="card mb-2 challenge-title-card shadow-sm border-0"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
    <img
      height="25px"
      src="/curriculumAssets/icons/pending.svg"
      width="25px"
    />
  </div>
</div>
`;

exports[`Storyshots Components/ChallengeTitleCard Rejected 1`] = `
<div
  className="card mb-2 challenge-title-card shadow-sm border-0"
  data-testid="challenge-title"
  onClick={[Function]}
>
  <div
    className="card-body d-flex justify-content-between"
  >
    <div>
      0. Greater than 5
    </div>
    <img
      height="25px"
      src="/curriculumAssets/icons/rejected.svg"
      width="25px"
    />
  </div>
</div>
`;

exports[`Storyshots Components/ChallengesCompletedCard Challenges Completed 1`] = `
<div
  className="card text-center shadow-sm"
>
  <div
    className="card-body"
  >
    <img
      className="mt-3"
      src="/curriculumAssets/icons/icon-challenge-complete.jpg"
    />
    <h4
      className="card-title mt-2"
    >
      Congratulations!
    </h4>
    <p
      className="success-message"
    >
      You have successfully completed all challenges
    </p>
    <p
      className="review-message"
    >
      You can help your peers by
      <a
        className="font-weight-bold mx-1"
        href="https://chat.c0d3.com/c0d3/channels/js0-foundations"
        rel="noopener noreferrer"
        target="_blank"
      >
        answering questions
      </a>
      they have in the lesson and
      <a
        className="font-weight-bold mx-1"
        href="https://c0d3.com/teacher/5"
        rel="noopener noreferrer"
        target="_blank"
      >
        reviewing challenge submissions
      </a>
    </p>
  </div>
  <div
    className="card-footer d-flex bg-primary"
  >
    <p
      className="text-white mr-3 my-2"
    >
      You can show your appreciation to the user that helped you the most by giving them a star
    </p>
    <button
      className="btn btn-light text-primary font-weight-bold ml-auto"
    >
      Give Star
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Footer Footer 1`] = `
<footer
  className="mt-5 font-weight-light text-center pb-5 text-muted"
>
  © Copyright 2020 GarageScript
  <br />
  All Rights Reserved
</footer>
`;

exports[`Storyshots Components/Input Email Input 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <input
    className="form-control form-control-lg font-weight-light mb-3 "
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Email address"
    type="email"
    value="email@domain.com"
  />
  <input
    className="form-control form-control-lg font-weight-light mb-3 "
    name="emailError"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Email address"
    type="email"
    value="inv@lid^email@domain.con"
  />
  <button
    className="btn btn-primary"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Input Password Input 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <input
    className="form-control form-control-lg font-weight-light mb-3 "
    name="password"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value="password"
  />
  <input
    className="form-control form-control-lg font-weight-light mb-3 "
    name="passwordError"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Email address"
    type="password"
    value="123"
  />
  <button
    className="btn btn-primary"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Input Text Input 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <input
    className="form-control form-control-lg font-weight-light mb-3 "
    name="text"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your text"
    type="text"
    value="Some text"
  />
  <input
    className="form-control form-control-lg font-weight-light mb-3 "
    name="textError"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your text"
    type="text"
    value="Wrong value"
  />
  <button
    className="btn btn-primary"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/InputGroup Disabled 1`] = `
<div
  className="input-group  col-6"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="email"
    className="form-control"
    disabled={true}
    onChange={[Function]}
    placeholder="Type in your email address"
    type="text"
  />
  <div
    className="input-group-append"
  >
    <button
      className="btn btn-primary"
      disabled={true}
      id="button-addon2"
      onClick={[Function]}
      type="button"
    >
      Join Waitlist
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/InputGroup Size Default 1`] = `
<div
  className="input-group  col-6"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="email"
    className="form-control"
    disabled={false}
    onChange={[Function]}
    placeholder="Type in your email address"
    type="text"
  />
  <div
    className="input-group-append"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      id="button-addon2"
      onClick={[Function]}
      type="button"
    >
      Join Waitlist
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/InputGroup Size Large 1`] = `
<div
  className="input-group input-group-lg col-6"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="email"
    className="form-control"
    disabled={false}
    onChange={[Function]}
    placeholder="Type in your email address"
    type="text"
  />
  <div
    className="input-group-append"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      id="button-addon2"
      onClick={[Function]}
      type="button"
    >
      Join Waitlist
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/InputGroup Size Small 1`] = `
<div
  className="input-group input-group-sm col-6"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="email"
    className="form-control"
    disabled={false}
    onChange={[Function]}
    placeholder="Type in your email address"
    type="text"
  />
  <div
    className="input-group-append"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      id="button-addon2"
      onClick={[Function]}
      type="button"
    >
      Join Waitlist
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Layout With Layout 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand text-primary font-weight-bold"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <div
            className="navbar-nav collapse navbar-collapse"
          >
            <a
              className="nav-item nav-link active"
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <span
                className="sr-only"
              >
                (current)
              </span>
              Home
            </a>
            <a
              className="nav-item nav-link"
              href="/#learning"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Learning Process
            </a>
            <a
              className="nav-item nav-link"
              href="https://c0d3.com/book"
              rel="noopener noreferrer"
              target="_blank"
            >
              Resources
            </a>
            <a
              className="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          className="btn btn-secondary border mr-3"
          href="/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Login
        </a>
        <a
          className="btn btn-secondary border mr-3"
          href="/signup"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Signup
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="container"
  >
    <div
      className="row"
      style={
        Object {
          "height": "100vh",
        }
      }
    >
      <div
        className="card col-6"
      >
        <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            Card title
          </h5>
          <p
            className="card-text"
          >
            Some quick example text to build on the card title and content.
          </p>
          <a
            className="btn btn-primary"
            href="#"
          >
            Go somewhere
          </a>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>,
]
`;

exports[`Storyshots Components/Layout Without Layout 1`] = `
<div
  className="row"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="card col-6"
  >
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        Card title
      </h5>
      <p
        className="card-text"
      >
        Some quick example text to build on the card title and content.
      </p>
      <a
        className="btn btn-primary"
        href="#"
      >
        Go somewhere
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/LessonCard Basic 1`] = `
<div
  className="card shadow-sm mt-3 d-block border-0"
>
  <div
    className="d-flex p-2"
  >
    <img
      alt="js-4-cover.svg"
      src="/curriculumAssets/lessonCoversSvg/js-4-cover.svg"
    />
    <div
      className="w-100 pl-4"
    >
      <div>
        <h4
          className="lesson-card__title font-weight-bold mt-3"
        >
          <a
            className=""
            href="/curriculum/4"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            HTML, CSS, JavaScript
          </a>
        </h4>
        <div>
          <div
            className="d-inline-block mr-4"
          >
            <img
              alt="icon-challenge"
              className="mr-2"
              src="/curriculumAssets/icons/icon-challenge.svg"
            />
            <span
              className="lesson-card__icon-text"
            >
              7
               CHALLENGES
            </span>
          </div>
        </div>
        <p
          className="lesson-card__description mt-2"
        >
          Create basic Front-End Mini-Projects that demonstrate User Interface logic and understanding of Web Development.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/LessonCard With Completed 1`] = `
<div
  className="card shadow-sm mt-3 d-block border-0"
>
  <div
    className="d-flex p-2"
  >
    <img
      alt="js-4-cover.svg"
      src="/curriculumAssets/lessonCoversSvg/js-4-cover.svg"
    />
    <div
      className="w-100 pl-4"
    >
      <span
        className="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "height": "15px",
            }
          }
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
          />
          <polyline
            points="22 4 12 14.01 9 11.01"
          />
        </svg>
        <span
          className="mx-1"
        >
          COMPLETED
        </span>
      </span>
      <div>
        <h4
          className="lesson-card__title font-weight-bold mt-3"
        >
          <a
            className=""
            href="/curriculum/4"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            HTML, CSS, JavaScript
          </a>
        </h4>
        <div>
          <div
            className="d-inline-block mr-4"
          >
            <img
              alt="icon-challenge"
              className="mr-2"
              src="/curriculumAssets/icons/icon-challenge.svg"
            />
            <span
              className="lesson-card__icon-text"
            >
              7
               CHALLENGES
            </span>
          </div>
        </div>
        <p
          className="lesson-card__description mt-2"
        >
          Create basic Front-End Mini-Projects that demonstrate User Interface logic and understanding of Web Development.
        </p>
      </div>
      <a
        className="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        href="https://c0d3.com/teacher/5"
      >
        Review
        Submissions
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/LessonCard With In Progress 1`] = `
<div
  className="card shadow-sm mt-3 d-block lesson-card__container_inprogress border-primary"
>
  <div
    className="d-flex p-2"
  >
    <img
      alt="js-4-cover.svg"
      src="/curriculumAssets/lessonCoversSvg/js-4-cover.svg"
    />
    <div
      className="w-100 pl-4"
    >
      <div>
        <h4
          className="lesson-card__title font-weight-bold mt-3"
        >
          <a
            className=""
            href="/curriculum/4"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            HTML, CSS, JavaScript
          </a>
        </h4>
        <div>
          <div
            className="d-inline-block mr-4"
          >
            <img
              alt="icon-challenge"
              className="mr-2"
              src="/curriculumAssets/icons/icon-challenge.svg"
            />
            <span
              className="lesson-card__icon-text"
            >
              7
               CHALLENGES
            </span>
          </div>
        </div>
        <p
          className="lesson-card__description mt-2"
        >
          Create basic Front-End Mini-Projects that demonstrate User Interface logic and understanding of Web Development.
        </p>
      </div>
    </div>
  </div>
  <div
    className="p-2 bg-primary"
  >
    <a
      className="lesson-card__button btn btn-light mr-2 my-1 text-primary"
      href="https://www.notion.so/JS-4-Front-End-Engineering-c59fbdd58dcc4214956f7856e0892b52"
      rel="noopener noreferrer"
      target="_blank"
    >
      Start Lesson
    </a>
    <a
      className="lesson-card__button btn bg-primary my-1 text-white border border-white"
      href="https://c0d3.com/student/24"
      rel="noopener noreferrer"
      target="_blank"
    >
      View Challenges
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/LessonTitleCard Basic 1`] = `
<div
  className="card shadow-sm mt-3 col-12 px-0 pt-3 border-0"
>
  <div
    className="card-body p-0"
  >
    <div
      className="d-flex mb-3 px-3"
    >
      <img
        alt="lesson-cover"
        className="lessonTitleCard__lesson-cover mr-3"
        src="/curriculumAssets/lessonCoversSvg/js-0-cover.svg"
      />
      <div>
        <p
          className="m-0"
        >
          <a
            className=""
            href="/curriculum"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Go Back
          </a>
        </p>
        <h1
          className="lessonTitleCard__lesson-title"
        >
          Foundations
        </h1>
      </div>
    </div>
    <div
      className="card-footer bg-white p-0"
    >
      <a
        className="btn border-right rounded-0 px-4 py-3"
        href="#"
        rel="noopener noreferrer"
        target="_blank"
      >
        LESSON
      </a>
      <a
        className="btn border-right rounded-0 px-4 py-3"
        href="#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        CHALLENGES
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/LoadingSpinner Basic 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand text-primary font-weight-bold"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <div
            className="navbar-nav collapse navbar-collapse"
          >
            <a
              className="nav-item nav-link active"
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <span
                className="sr-only"
              >
                (current)
              </span>
              Home
            </a>
            <a
              className="nav-item nav-link"
              href="/#learning"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Learning Process
            </a>
            <a
              className="nav-item nav-link"
              href="https://c0d3.com/book"
              rel="noopener noreferrer"
              target="_blank"
            >
              Resources
            </a>
            <a
              className="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          className="btn btn-secondary border mr-3"
          href="/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Login
        </a>
        <a
          className="btn btn-secondary border mr-3"
          href="/signup"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Signup
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="container"
  >
    <div
      className="mt-4 card border-0 shadow-sm"
    >
      <div
        className="card-body d-flex flex-column align-items-center"
      >
        <h1>
          Loading
        </h1>
        <div
          className="spinner-border text-primary mt-1"
          role="status"
        >
          <span
            className="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>,
]
`;

exports[`Storyshots Components/NavLink Active Link 1`] = `
Array [
  <a
    className="btn btn-primary active"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <span
      className="sr-only"
    >
      (current)
    </span>
    Active Link
  </a>,
  <a
    className="btn btn-primary"
    href="/other"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Non-Active Link
  </a>,
]
`;

exports[`Storyshots Components/NavLink Basic 1`] = `
<a
  className=""
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Basic NavLink
</a>
`;

exports[`Storyshots Components/NavLink Blank Link 1`] = `
<a
  className=""
  href="http://c0d3.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Blank NavLink
</a>
`;

exports[`Storyshots Components/NavLink External Link 1`] = `
<a
  className=""
  href="/"
  rel="noopener noreferrer"
  target="_blank"
>
  External Link
</a>
`;

exports[`Storyshots Components/NavLink Styled Link 1`] = `
<a
  className="btn btn-primary"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Styled Link
</a>
`;

exports[`Storyshots Components/ProgressCard Basic 1`] = `
<div
  className="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
>
  <div
    className="card-body"
  >
    <div
      className="progress-card__progress-bar d-flex justify-content-center align-items-center rounded-circle"
    >
      <span
        className="font-weight-bold"
      >
        0
        %
      </span>
    </div>
    <h4
      className="progress-card__title mt-3"
    >
      You're off to a great start!
    </h4>
    <div
      className="mt-3"
    >
      <p>
        Start by setting up your development environment and then follow the lessons in the course.
      </p>
    </div>
    <a
      className="btn btn-light progress-card__button mt-2 text-primary"
      href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
      rel="noopener noreferrer"
      target="_blank"
    >
      Setup Development Environment
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/SubmissionCard Multiple Cards 1`] = `
<div
  className="card-group"
>
  <div
    className="card shadow-sm mr-3"
  >
    <div
      className="card-header bg-white"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col-0"
        >
          <h6
            className="text-uppercase bg-primary rounded-circle text-light p-3 mr-3"
          >
            NB
          </h6>
        </div>
        <div
          className="col-8"
        >
          <h5
            className="m-0"
          >
            noob101
          </h5>
          <div
            className="text-muted"
          >
            <small>
              Submitted on 
              Mar 25th 1:37pm
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card-body"
    >
      <p
        className="card-text text-primary"
      >
        Getting To Know Your Computer, pt. 1 - All Except You!
      </p>
      <a
        className="d-inline-block"
        href="#"
      >
        <button
          className="btn btn-primary"
        >
          Review
        </button>
      </a>
    </div>
  </div>
  <div
    className="card shadow-sm mr-3"
  >
    <div
      className="card-header bg-white"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col-0"
        >
          <h6
            className="text-uppercase bg-primary rounded-circle text-light p-3 mr-3"
          >
            HG
          </h6>
        </div>
        <div
          className="col-8"
        >
          <h5
            className="m-0"
          >
            hwong0305
          </h5>
          <div
            className="text-muted"
          >
            <small>
              Submitted on 
              Mar 29th 12:09am
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card-body"
    >
      <p
        className="card-text text-primary"
      >
        Uploading a File From Your Computer to Your Website
      </p>
      <a
        className="d-inline-block"
        href="#"
      >
        <button
          className="btn btn-primary"
        >
          Review
        </button>
      </a>
    </div>
  </div>
  <div
    className="card shadow-sm mr-3"
  >
    <div
      className="card-header bg-white"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col-0"
        >
          <h6
            className="text-uppercase bg-primary rounded-circle text-light p-3 mr-3"
          >
            AZ
          </h6>
        </div>
        <div
          className="col-8"
        >
          <h5
            className="m-0"
          >
            aortizoj
          </h5>
          <div
            className="text-muted"
          >
            <small>
              Submitted on 
              Mar 27th 9:58pm
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card-body"
    >
      <p
        className="card-text text-primary"
      >
        Biggest Num out of 2
      </p>
      <a
        className="d-inline-block"
        href="#"
      >
        <button
          className="btn btn-primary"
        >
          Review
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/SubmissionCard Pending Submission 1`] = `
<div
  className="card shadow-sm mr-3"
>
  <div
    className="card-header bg-white"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="col-0"
      >
        <h6
          className="text-uppercase bg-primary rounded-circle text-light p-3 mr-3"
        >
          NB
        </h6>
      </div>
      <div
        className="col-8"
      >
        <h5
          className="m-0"
        >
          noob101
        </h5>
        <div
          className="text-muted"
        >
          <small>
            Submitted on 
            Mar 25th 1:37pm
          </small>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card-body"
  >
    <p
      className="card-text text-primary"
    >
      Getting To Know Your Computer, pt. 1 - All Except You!
    </p>
    <a
      className="d-inline-block"
      href="#"
    >
      <button
        className="btn btn-primary"
      >
        Review
      </button>
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/landingNav Landing Nav 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand text-primary font-weight-bold"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      C0D3
    </a>
    <div
      id="navbarNav"
    >
      <div
        className="navbar-nav collapse navbar-collapse"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <a
            className="nav-item nav-link active"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className="sr-only"
            >
              (current)
            </span>
            Home
          </a>
          <a
            className="nav-item nav-link"
            href="/#learning"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Learning Process
          </a>
          <a
            className="nav-item nav-link"
            href="https://c0d3.com/book"
            rel="noopener noreferrer"
            target="_blank"
          >
            Resources
          </a>
          <a
            className="nav-item nav-link"
            href="https://chat.c0d3.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Help
          </a>
        </div>
      </div>
    </div>
    <div>
      <a
        className="btn btn-secondary border mr-3"
        href="/login"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Login
      </a>
      <a
        className="btn btn-secondary border mr-3"
        href="/signup"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Signup
      </a>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Pages/Login Login 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand text-primary font-weight-bold"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <div
            className="navbar-nav collapse navbar-collapse"
          >
            <a
              className="nav-item nav-link active"
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <span
                className="sr-only"
              >
                (current)
              </span>
              Home
            </a>
            <a
              className="nav-item nav-link"
              href="/#learning"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Learning Process
            </a>
            <a
              className="nav-item nav-link"
              href="https://c0d3.com/book"
              rel="noopener noreferrer"
              target="_blank"
            >
              Resources
            </a>
            <a
              className="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          className="btn btn-secondary border mr-3"
          href="/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Login
        </a>
        <a
          className="btn btn-secondary border mr-3"
          href="/signup"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Signup
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="container"
  >
    <div
      className="row mt-5"
    >
      <div
        className="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
      >
        <div
          className="card-body text-center pt-5 pb-5"
        >
          <h1
            className="card-title h2 font-weight-bold mb-5"
          >
            Login
          </h1>
          <p
            className="card-text"
          />
          <form
            action="#"
            data-testid="form"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="username"
                name="username"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Username"
                value=""
              />
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="password"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
              <button
                className="btn btn-primary btn-lg btn-block mb-3"
                data-testid="submit"
                type="submit"
              >
                Login to Your Account
              </button>
            </div>
          </form>
          <a
            className=""
            href="/forgotPassword"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Forgot your password?
          </a>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>,
]
`;

exports[`Storyshots Pages/landing Landing 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand text-primary font-weight-bold"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <div
            className="navbar-nav collapse navbar-collapse"
          >
            <a
              className="nav-item nav-link active"
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <span
                className="sr-only"
              >
                (current)
              </span>
              Home
            </a>
            <a
              className="nav-item nav-link"
              href="/#learning"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Learning Process
            </a>
            <a
              className="nav-item nav-link"
              href="https://c0d3.com/book"
              rel="noopener noreferrer"
              target="_blank"
            >
              Resources
            </a>
            <a
              className="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          className="btn btn-secondary border mr-3"
          href="/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Login
        </a>
        <a
          className="btn btn-secondary border mr-3"
          href="/signup"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Signup
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="bg-white"
  >
    <div
      className="container text-center pb-5"
    >
      <div
        className="row justify-center pt-5"
      >
        <div
          className="col-md-6 offset-md-3"
        >
          <img
            alt="Hero Image"
            className="img-fluid"
            src="header-01.svg"
          />
        </div>
      </div>
      <div
        className="row justify-center mt-5"
      >
        <div
          className="col-md-8 offset-md-2"
        >
          <h1
            style={
              Object {
                "fontSize": "3.8rem",
                "fontWeight": 900,
              }
            }
          >
            Become a Software Engineer the Hard Way
          </h1>
        </div>
      </div>
      <div
        className="row justify-center mt-4"
      >
        <div
          className="col-md-10 offset-md-1"
        >
          <p
            className="font-weight-light h4"
            style={
              Object {
                "lineHeight": 1.5,
              }
            }
          >
            Learn the right foundations you need to become a full stack software engineer. Our curriculum takes no shortcuts and effectively trains students with no technical background to become great software engineers.
          </p>
        </div>
      </div>
      <div
        className="row mt-5"
      >
        <div
          className="col-md-6 offset-md-3 mb-5"
        >
          <a
            className="btn btn-primary py-3 px-5"
            href="https://c0d3.com/book"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get Started
          </a>
        </div>
      </div>
      <div
        className="row mt-5"
      >
        <div
          className="col-md-6 offset-md-3"
        >
          <h1
            className="display-4 font-weight-bold"
            id="learning"
          >
            Learning Process
          </h1>
        </div>
      </div>
      <div
        className="row mt-5"
      >
        <div
          className="col-md-10 offset-md-1"
        >
          <p
            className="font-weight-light h4"
            style={
              Object {
                "lineHeight": 1.5,
              }
            }
          >
            Our learning process is interactive and follows the same practice as a well functioning engineering team. From the first line of code you write, you will be code reviewed by engineers to ensure you are always following industry best practices.
          </p>
        </div>
      </div>
      <div
        className="row mt-5 align-items-start mb-5"
      >
        <div
          className="col-md-4"
        >
          <img
            alt=""
            src="choose-01.svg"
            style={
              Object {
                "height": "170px",
              }
            }
          />
          <h4
            className="mt-3 font-weight-bold"
          >
            Modern Curriculum
          </h4>
          <p
            className="mt-4 font-weight-light"
          >
            First the curriculum will help you achieve mastery in JavaScript. Using JavaScript, you will learn about different branches of software engineering: websites, mobile applications, servers, and machine learning.
          </p>
        </div>
        <div
          className="col-md-4"
        >
          <img
            alt=""
            src="choose-02.svg"
            style={
              Object {
                "height": "170px",
              }
            }
          />
          <h4
            className="mt-3 font-weight-bold"
          >
            Support
          </h4>
          <p
            className="mt-4 font-weight-light"
          >
            One of the most important skills in a challenging workplace is knowing how to ask for help. Our curriculum is intentionally difficult and we have dedicated mentors to answer your questions and guide you how to communicate effectively.
          </p>
        </div>
        <div
          className="col-md-4"
        >
          <img
            alt=""
            src="choose-03.svg"
            style={
              Object {
                "height": "170px",
              }
            }
          />
          <h4
            className="mt-3 font-weight-bold"
          >
            Work Experience
          </h4>
          <p
            className="mt-4 font-weight-light"
          >
            Once you have completed our curriculum and learned to communicate effectively, you will be invited to contribute to this open-source project to improve the learning experience for future students.
          </p>
        </div>
      </div>
    </div>
    <div
      className="container-fluid py-5"
      style={
        Object {
          "background": "rgb(84,64,216)",
          "color": "white",
        }
      }
    >
      <div
        className="container mt-5"
      >
        <h1
          className="mt-5 display-4 font-weight-bold text-center"
          id="journey"
        >
          Your Learning Journey
        </h1>
        <p
          className="mt-5 font-weight-light col-md-8 offset-md-2 pb-5 text-center h4"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          Our learning process is interactive and follows the same practice as a well functioning engineering team. From the first line of code you write, you will be code reviewed by engineers to ensure you are always following industry best practice
        </p>
        <div
          className="row mt-5 pb-5"
        >
          <div
            className="col-md-5 order-md-2 text-center"
          >
            <img
              alt=""
              className="mb-3 img-fluid"
              src="journey-01.svg"
            />
          </div>
          <div
            className="col-md-5 offset-md-1 order-md-1"
          >
            <h2
              className="font-weight-bold"
            >
              Creating an account
            </h2>
            <p
              className="mt-3 font-weight-light"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              After creating an account, you will gain access to our code reviewed curriculum and our community chat. You will be able to setup c0d3.com CLI which will allow you to submit code for review. The CLI allows you to code in Javascript from any code editor of your choice.
            </p>
          </div>
        </div>
        <div
          className="row mt-5 pb-5"
        >
          <div
            className="col-md-5 offset-md-1 text-center"
          >
            <img
              alt=""
              className="mb-3 img-fluid"
              src="journey-02.svg"
            />
          </div>
          <div
            className="col-md-5"
          >
            <h2
              className="font-weight-bold"
            >
              Curriculum
            </h2>
            <p
              className="mt-3 font-weight-light"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              Each lesson in our curriculum is designed to be hands on and you will learn by working through the exercises in the curriculum. All hosting will be provided for you so you can proudly share your accomplishments with the world without spending a penny. The exercises and challenges are designed to be difficult to force you to ask questions. Support is available in our chat channel or in-person at one of our
               
              <a
                className="text-warning"
                href="https://www.meetup.com/San-Jose-C0D3/"
                rel="noopener noreferrer"
                target="_blank"
              >
                meetup groups
              </a>
              . Students who have passed the lessons may be available at the meetup or in the chatroom to help you with your questions.
            </p>
          </div>
        </div>
        <div
          className="row mt-5 pb-5"
        >
          <div
            className="col-md-5 order-md-2 text-center"
          >
            <img
              alt=""
              className="mb-3 img-fluid"
              src="journey-03.svg"
            />
          </div>
          <div
            className="col-md-5 order-md-1 offset-md-1"
          >
            <h2
              className="font-weight-bold"
            >
              Pay It Forward
            </h2>
            <p
              className="mt-3 font-weight-light"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              When you finish your lesson, you will have the opportunity to help new students who are starting the lesson. By code reviewing students to the same standard that you were code reviewed, you help ensure that new students are writing good code and becoming better engineers. At the same time, conducting regular code reviews helps you improve your ability to read/debug code as well as understand the lesson concepts at a deeper level.
            </p>
          </div>
        </div>
        <div
          className="row mt-5 pb-5"
        >
          <div
            className="col-md-5 offset-md-1 text-center"
          >
            <img
              alt=""
              className="mb-3 img-fluid"
              src="journey-04.svg"
            />
          </div>
          <div
            className="col-md-5"
          >
            <h2
              className="font-weight-bold"
            >
              Work Experience
            </h2>
            <p
              className="mt-3 font-weight-light"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              After completing our curriculum, you will gain access to our internal code repository that powers c0d3.com and have the opportunity to work with our engineers and experience the entire workflow of a full stack software engineer. There will be bugs and feature list on our issue board for you to contribute to and you will be held to the same expectations as any respected engineer: high quality code and proper testing. Every feature contribution will be documented and recognized on our contribution list and you would be able to list your contributions as work experience on your resume.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mt-5 py-5 text-center"
    >
      <h1
        className="display-4 font-weight-bold"
      >
        Get Started Now
      </h1>
      <p
        className="mt-3 font-weight-light"
        style={
          Object {
            "fontSize": "1.5rem",
            "lineHeight": 1.5,
          }
        }
      >
        Start your journey to being a full stack software engineer
      </p>
      <a
        className="btn btn-primary py-3 px-5 mt-4"
        href="https://c0d3.com/book"
        rel="noopener noreferrer"
        target="_blank"
      >
        Get Started
      </a>
    </div>
  </div>,
  <footer
    className="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>,
]
`;

exports[`Storyshots Pages/signup Signup 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand text-primary font-weight-bold"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          className="navbar-nav collapse navbar-collapse"
        >
          <div
            className="navbar-nav collapse navbar-collapse"
          >
            <a
              className="nav-item nav-link active"
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <span
                className="sr-only"
              >
                (current)
              </span>
              Home
            </a>
            <a
              className="nav-item nav-link"
              href="/#learning"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Learning Process
            </a>
            <a
              className="nav-item nav-link"
              href="https://c0d3.com/book"
              rel="noopener noreferrer"
              target="_blank"
            >
              Resources
            </a>
            <a
              className="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          className="btn btn-secondary border mr-3"
          href="/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Login
        </a>
        <a
          className="btn btn-secondary border mr-3"
          href="/signup"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Signup
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="container"
  >
    <div
      className="row mt-5"
    >
      <div
        className="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
      >
        <div
          className="card-body text-center pt-5 pb-5"
        >
          <h1
            className="card-title h2 font-weight-bold mb-5"
          >
            Create Account
          </h1>
          <p
            className="card-text"
          />
          <div
            className="bg-light m-auto px-5 border-0'"
          >
            
            
          </div>
          <form
            action="#"
            data-testid="form"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-group "
            >
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="email"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="username"
                name="username"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Username"
                value=""
              />
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="password"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="firstName"
                name="firstName"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="First name"
                value=""
              />
              <input
                className="form-control form-control-lg font-weight-light mb-3 "
                data-testid="lastName"
                name="lastName"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Last name"
                value=""
              />
              <button
                className="btn btn-primary btn-lg btn-block mb-3"
                data-testid="submit"
                type="submit"
              >
                Create Account
              </button>
            </div>
          </form>
          <p
            className="text-black-50"
          >
            Already have an account?
             
            <a
              className="text-primary"
              href="/login"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Login
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>,
]
`;
